<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>
    <string name="app_name">NotePad</string>
    <string name="live_folder_name">Notes</string>

    <string name="title_edit_title">Note title:</string>
    <string name="title_create">New note</string>
    <string name="title_edit">Edit: %1$s</string>
    <string name="title_notes_list">Notes</string>

    <string name="menu_add">New note</string>
    <string name="menu_save">Save</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_open">Open</string>
    <string name="menu_revert">Revert changes</string>
    <string name="menu_copy">Copy</string>
    <string name="menu_paste">Paste</string>

    <string name="button_ok">OK</string>
    <string name="text_title">Title:</string>

    <string name="resolve_edit">Edit note</string>
    <string name="resolve_title">Edit title</string>

    <string name="error_title">Error</string>
    <string name="error_message">Error loading note</string>
    <string name="nothing_to_save">There is nothing to save</string>
    <string name="search_hint">Enter keyword search…</string>
    <string name="menu_search">Search</string>
    <string name="no_notes">No notes found</string>
    <string name="menu_search_all">Search all</string>
    <string name="menu_search_title">Search by title</string>
    <string name="menu_search_content">Search by content</string>
    <string name="search_hint_all">Search title or content…</string>
    <string name="search_hint_title">Search by title…</string>
    <string name="search_hint_content">Search by content…</string>

    <!-- 颜色菜单 -->
    <string name="menu_color_change">Change color</string>
    <string name="menu_color_default">Default color</string>
    <string name="menu_color_yellow">Yellow</string>
    <string name="menu_color_green">Green</string>
    <string name="menu_color_blue">Blue</string>
    <string name="menu_color_red">Red</string>

    <!-- 主题设置 -->
    <string name="menu_theme_follow_system">Theme: Follow system</string>
    <string name="menu_theme_light">Theme: Light</string>
    <string name="menu_theme_dark">Theme: Dark</string>
    <string name="menu_export">Export</string>

    <!-- 偏好设置 -->
    <string name="menu_settings">Settings</string>
    <string name="pref_title_theme">Theme mode</string>
    <string name="pref_title_relative_time">Show relative time</string>
    <string name="pref_title_show_preview">Show content preview</string>
    <string name="pref_title_default_color">Default note color</string>
    <string name="pref_theme_system">Follow system</string>
    <string name="pref_theme_light">Light</string>
    <string name="pref_theme_dark">Dark</string>
    <string name="pref_color_default">Default</string>
    <string name="pref_color_yellow">Yellow</string>
    <string name="pref_color_green">Green</string>
    <string name="pref_color_blue">Blue</string>
    <string name="pref_color_red">Red</string>
</resources>