<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--  This is our one standard application action (creating a new note). -->
    <item android:id="@+id/menu_add"
          android:icon="@drawable/ic_menu_compose"
          android:title="@string/menu_add"
          android:alphabeticShortcut='a'
          app:showAsAction="always" />
    <!--  If there is currently data in the clipboard, this adds a PASTE menu item to the menu
          so that the user can paste in the data.. -->
    <item android:id="@+id/menu_paste"
          android:icon="@drawable/ic_menu_edit"
          android:title="@string/menu_paste"
          android:alphabeticShortcut='p'
          app:showAsAction="ifRoom" />
    <!-- 主题设置（溢出菜单） -->
    <group android:id="@+id/menu_theme_group">
        <item
            android:id="@+id/menu_theme_follow_system"
            android:title="@string/menu_theme_follow_system"
            android:checkable="true" />
        <item
            android:id="@+id/menu_theme_light"
            android:title="@string/menu_theme_light"
            android:checkable="true" />
        <item
            android:id="@+id/menu_theme_dark"
            android:title="@string/menu_theme_dark"
            android:checkable="true" />
    </group>
    <!-- 设置 -->
    <item
        android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        app:showAsAction="never" />
</menu>